Added evidence upload and related endpoints to API server and client (#1335)
* Added option to upload file to the API.

* Created an evidence with the uplaoded file.

* Added validators to EvidenceInformation and
methods to make it work with UploadFile. Also, continued working on
update_evidence, and used serialized evidences to TurbiniaEvidences in
Redis.

* Made it possible to upload more than one Json body

* Separated the evidence endpoints from config

* Finished implementing evidence/summary endpoint

* Created an evidence scheme and added
TurbiniaEvidenceCollection to redis

* Updated upload so it does not rely on arg order

* Fixed some issues with UploadFile

* Changed the evidence key from hash to UUID and
added a special key to redis to find their hashes.

* Made a function to upload every initialized
evidence to redis.

* Updated the initialization function.

* Updated openapi.yaml file

* Fixed error with openapi.yaml

* Made some changes to commands

* Added some todo comments

* Created functions to store evidence in redis.

* Updated upload file endpoint to not modify redis

* Added fields to turbinia_config and split upload

* Reverted changes in evidence, state_manger and
turbiniactl

* Generated new turbinia_client

* Regenerated Turbinia api library

* Regenerated Turbinia API library

* Generated the api again and added evidence command

* Fixed typo

* Continued working on api commands

* Removed build directory

* Added query and updated summary in the API

* Updates

* Finished implementing query and summary methods

* Made more tests with upload_evidence

* Updated comments in state_manager

* Added unit tests for evidence api endpoints

* Added todo comments and removed completed ones

* Continued working on upload evidence

* Removed build folder and fixed issues.

* Restored the cli folder.

* Restored commands and formatter

* Fixed issues in commands.py
