# turbinia/api/routes/config.py
@@ -22,7 +22,6 @@ from fastapi.responses import JSONResponse
 from fastapi.requests import Request
 
 from turbinia import config as turbinia_config
-from turbinia import evidence
 from turbinia.api.schemas import request_options
 
 log = logging.getLogger('turbinia')
@@ -41,24 +40,6 @@ async def read_config(request: Request):
     log.error(f'Error reading configuration: {exception!s}')
     raise HTTPException(
         status_code=500, detail='error reading configuration') from exception
-
-
-@router.get('/evidence')
-async def get_evidence_types(request: Request):
-  """Returns supported Evidence object types and required parameters."""
-  attribute_mapping = evidence.map_evidence_attributes()
-  return JSONResponse(content=attribute_mapping, status_code=200)
-
-
-@router.get('/evidence/{evidence_name}')
-async def get_evidence_attributes_by_name(request: Request, evidence_name):
-  """Returns supported Evidence object types and required parameters."""
-  attribute_mapping = evidence.map_evidence_attributes()
-  attribute_mapping = {evidence_name: attribute_mapping.get(evidence_name)}
-  if not attribute_mapping:
-    raise HTTPException(
-        status_code=404, detail=f'Evidence type ({evidence_name:s}) not found.')
-  return JSONResponse(content=attribute_mapping, status_code=200)
 
 
 @router.get('/request_options')
